assets/main.scss
---
---

$grey-color:       #CC0033;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

$grey-color-old:       #828282;
$grey-color-light-old: lighten($grey-color, 40%);
$grey-color-dark-old:  darken($grey-color, 25%);

$brand-color:   #CC0033;

// ---- Dark mode ----
$dark-text-color:       #fff;
$dark-background-color: #303030;

$dark-grey-color-light: lighten($grey-color, 20%);
$dark-grey-color-dark:  darken($grey-color, 10%);

@import "minima";

.footer-col-wrapper {
    color: $grey-color-old;
}

.post-meta {
    color: $grey-color-old;
}

.nav-home,
.post-back {
    margin-top: 15px;
    font-size: 20px;
}

hr {
    margin: 10px 0;
}

.breadcrumbs {
  list-style:none;
  margin: 0 0 16px ;
}

.breadcrumbs li {
  display: inline-block;
}

.breadcrumbs li+li:before  {
  padding:8px;
  color:#000;
  content: ">";
}

.post-content h1 {
  font-size: 38px;
}

.popup-container{
  position: fixed;
  top:0;
  left:0;
  right: 0;
  bottom: 0;
  z-index: 997;
  cursor: pointer;

  & .popup-backdrop {
    position: absolute;
    top:0;
    left:0;
    right: 0;
    bottom: 0;
    background: rgba(0,0,0,.5);
  }

  & .popup-box {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 40vw;
    padding: 8px 16px;
    background: #fff;
    border-radius: 5px;
    cursor: initial;
  }
}

.switch {
  position: relative;
  display: inline-block;
  width: 30px;
  height: 17px;

  input { 
    opacity: 0;
    width: 0;
    height: 0;
  }
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
  
  &:before {
    position: absolute;
    content: "";
    height: 13px;
    width: 13px;
    left: 2px;
    bottom: 2px;
    background-color: white;
    -webkit-transition: .2s;
    transition: .2s;
  }

  &.round {
    border-radius: 17px;
  }

  &.round:before {
    border-radius: 50%;
  }
}


input:checked + .slider {
  background-color: #CC0033;
}

input:focus + .slider {
  box-shadow: 0 0 1px #CC0033;
}

input:checked + .slider:before {
  -webkit-transform: translateX(13px);
  -ms-transform: translateX(13px);
  transform: translateX(13px);
}

.svg-icon-darkmode {
  vertical-align: top;
  fill: $brand-color;
}

body.dark-mode {
  color: $dark-text-color;
  background-color: $dark-background-color; 

  .site-header {
    border-top: 5px solid $dark-grey-color-dark;
    border-bottom: 1px solid $dark-grey-color-light;
  }

  .site-title:visited {
    color: $dark-grey-color-dark;
  }

  a {
    color: lighten($brand-color, 5%)
  }

  a:visited {
    color: darken($brand-color, 5%);
  }

  a:hover {
    color: $dark-text-color;
  }

  pre,code {
    border: 1px solid $dark-grey-color-light;
    color: #111;
  }

  pre > code {
    border: 0;
  }

  .site-footer{
    border-top: 1px solid $dark-grey-color-light;
  }

  .site-nav .page-link {
    color: $dark-text-color;
  }

  .popup-container .popup-box {
    color: #111;
  }
  
}

